website/versioned_docs/version-1.3.0/tutorials/automating/index.mdx
---
title: Automating Orchestration
sidebar_label: Automating Orchestration
---

import LinkButtons from "@site/src/components/LinkButtons.jsx";
import CellOutput from "@site/src/components/CellOutput.jsx";
import {PlotlyFigure} from "@site/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/facebook/ax/blob/main/tutorials/automating/automating.ipynb"
  colabUrl="https://colab.research.google.com/github/facebook/ax/blob/main/tutorials/automating/automating.ipynb"
/>

# Automating Orchestration

Previously, we've demonstrated [using Ax for ask-tell optimization](../getting_started),
a paradigm in which we "ask" Ax for candidate configurations and "tell" Ax our
observations. This can be effective in many scenarios, and it can be automated through
use of flow control statements like `for` and `while` loops. However there are some
situations where it would be beneficial to allow Ax to orchestrate the entire
optimization: deploying trials to external systems, polling their status, and reading
their results. This can be common in a number of real world engineering tasks,
including:

- **Large scale machine learning experiments** running workloads on high-performance
  computing clusters
- **A/B tests** conducted using an external experimentation platform
- **Materials science** optimizations utilizing a self-driving laboratory

Ax's `Client` can orchestrate automated adaptive experiments like this using its method
`run_trials`. Users create custom classes which implement Ax's `IMetric` and `IRunner`
protocols to handle data fetching and trial deployment respectively. Then, users simply
configure their `Client` as they would normally and call `run_trials`; Ax will deploy
trials, fetch data, generate candidates, and repeat as necessary. Ax can manage complex
orchestration tasks including launching multiple trials in parallel while still
respecting a user-defined concurrency limit, and gracefully handling trial failure by
allowing the experiment to continue even if some trials do not complete successfully or
data fetching fails.

In this tutorial we will optimize the Hartmann6 function as before, but we will
configure custom Runners and Metrics to mimic an external execution system. The Runner
will calculate Hartmann6 with the appropriate parameters, write the result to a file,
and tell Ax the trial is ready after 5 seconds. The Metric will find the appropriate
file and report the results back to Ax.

### Learning Objectives

- Learn when it can be appropriate and/or advantageous to run Ax in a closed-loop
- Configure custom Runners and Metrics, allowing Ax to deploy trials and fetch data
  automatically
- Understand tradeoffs between parallelism and optimization performance

### Prerequisites

- Understanding of [adaptive experimentation](../../intro-to-ae.mdx) and
  [Bayesian optimization](../../intro-to-bo.mdx)
- Familiarity with
  [configuring and conducting experiments in Ax](../getting_started/index.mdx)

## Step 1: Import Necessary Modules

First, ensure you have all the necessary imports:

```python
import os
import time
from typing import Any, Mapping

import numpy as np
from ax.api.client import Client
from ax.api.configs import RangeParameterConfig
from ax.api.protocols.metric import IMetric
from ax.api.protocols.runner import IRunner, TrialStatus
from ax.api.types import TParameterization
```

<CellOutput>
{
`[INFO 06-04 15:51:09] ax.storage.sqa_store.with_db_settings_base: Ax SQL storage initialized with SQLAlchemy 1.4.17`
}
</CellOutput>

# Step 2: Defining our custom Runner and Metric

As stated before, we will be creating custom Runner and Metric classes to mimic an
external system. Let's start by defining our Hartmann6 function as before.

```python
# Hartmann6 function
def hartmann6(x1, x2, x3, x4, x5, x6):
    alpha = np.array([1.0, 1.2, 3.0, 3.2])
    A = np.array([
        [10, 3, 17, 3.5, 1.7, 8],
        [0.05, 10, 17, 0.1, 8, 14],
        [3, 3.5, 1.7, 10, 17, 8],
        [17, 8, 0.05, 10, 0.1, 14]
    ])
    P = 10**-4 * np.array([
        [1312, 1696, 5569, 124, 8283, 5886],
        [2329, 4135, 8307, 3736, 1004, 9991],
        [2348, 1451, 3522, 2883, 3047, 6650],
        [4047, 8828, 8732, 5743, 1091, 381]
    ])

    outer = 0.0
    for i in range(4):
        inner = 0.0
        for j, x in enumerate([x1, x2, x3, x4, x5, x6]):
            inner += A[i, j] * (x - P[i, j])**2
        outer += alpha[i] * np.exp(-inner)
    return -outer

hartmann6(0.1, 0.45, 0.8, 0.25, 0.552, 1.0)
```

<CellOutput>
{
`np.float64(-0.4878737485613134)`
}
</CellOutput>

Next, we will define the `MockRunner`. The `MockRunner` requires two methods:
`run_trial` and `poll_trial`.

`run_trial` deploys a trial to the external system with the given parameters. In this
case, we will simply save a file containing the result of a call to the Hartmann6
function.

`poll_trial` queries the external system to see if the trial has completed, failed, or
if it's still running. In this mock example, we will check to see how many seconds have
elapsed since the `run_trial` was called and only report a trial as completed once 5
seconds have elapsed.

Runners may also optionally implement a `stop_trial` method to terminate a trial's
execution before it has completed. This is necessary for using
[early stopping](../early_stopping) in closed-loop experimentation, but we will skip
this for now.

```python
class MockRunner(IRunner):
    def run_trial(
        self, trial_index: int, parameterization: TParameterization
    ) -> dict[str, Any]:
        file_name = f"{int(time.time())}.txt"

        x1 = parameterization["x1"]
        x2 = parameterization["x2"]
        x3 = parameterization["x3"]
        x4 = parameterization["x4"]
        x5 = parameterization["x5"]
        x6 = parameterization["x6"]

        result = hartmann6(x1, x2, x3, x4, x5, x6)

        with open(file_name, "w") as f:
            f.write(f"{result}")

        return {"file_name": file_name}

    def poll_trial(
        self, trial_index: int, trial_metadata: Mapping[str, Any]
    ) -> TrialStatus:
        file_name = trial_metadata["file_name"]
        time_elapsed = time.time() - int(file_name[:4])

        if time_elapsed < 5:
            return TrialStatus.RUNNING

        return TrialStatus.COMPLETED
```

It's worthwhile to instantiate your Runner and test it is behaving as expected. Let's
deploy a mock trial by manually calling `run_trial` and ensuring it creates a file.

```python
runner = MockRunner()

trial_metadata = runner.run_trial(
    trial_index=-1,
    parameterization={
        "x1": 0.1,
        "x2": 0.45,
        "x3": 0.8,
        "x4": 0.25,
        "x5": 0.552,
        "x6": 1.0,
    },
)

os.path.exists(trial_metadata["file_name"])
```

<CellOutput>
{
`True`
}
</CellOutput>

Now, we will implement the Metric. Metrics only need to implement a `fetch` method,
which returns a progression value (i.e. a step in a timeseries) and an observation
value. Note that the observation can either be a simple float or a (mean, SEM) pair if
the external system can report observed noise.

In this case, we have neither a relevant progression value nor observed noise so we will
simply read the file and report `(0, value)`.

```python
class MockMetric(IMetric):
    def fetch(
        self,
        trial_index: int,
        trial_metadata: Mapping[str, Any],
    ) -> tuple[int, float | tuple[float, float]]:
        file_name = trial_metadata["file_name"]

        with open(file_name, 'r') as file:
            value = float(file.readline())
            return (0, value)
```

Again, let's validate the Metric created above by instantiating it and reporting the
value from the file generated during testing of the Runner.

```python
# Note: all Metrics must have a name. This will become relevant when attaching metrics to the Client
hartmann6_metric = MockMetric(name="hartmann6")

hartmann6_metric.fetch(trial_index=-1, trial_metadata=trial_metadata)
```

<CellOutput>
{
`(0, -0.4878737485613134)`
}
</CellOutput>

## Step 3: Initialize the Client and Configure the Experiment

Finally, we can initialize the `Client` and configure the experiment as before. This
will be familiar to readers of the
[Getting Started with Ax tutorial](../getting_started) -- the only difference is we will
attach the previously defined Runner and Metric by calling `configure_runner` and
`configure_metrics` respectively.

Note that when initializing `hartmann6_metric` we set `name=hartmann6`, matching the
objective we now set in `configure_optimization`. The `configure_metrics` method uses
this name to ensure that data fetched by this Metric is used correctly during the
experiment. Be careful to correctly set the name of the Metric to reflect its use as an
objective or outcome constraint.

```python
client = Client()
# Define six float parameters for the Hartmann6 function
parameters = [
    RangeParameterConfig(name=f"x{i + 1}", parameter_type="float", bounds=(0, 1))
    for i in range(6)
]

client.configure_experiment(
    parameters=parameters,
    # The following arguments are only necessary when saving to the DB
    name="hartmann6_experiment",
    description="Optimization of the Hartmann6 function",
    owner="developer",
)
client.configure_optimization(objective="-hartmann6")
```

```python
client.configure_runner(runner=runner)
client.configure_metrics(metrics=[hartmann6_metric])
```

## Step 5: Run trials

Once the `Client` has been configured, we can begin running trials.

Internally, Ax uses a class named `Scheduler` to orchestrate the trial deployment,
polling, data fetching, and candidate generation.

![Scheduler state machine](assets/img/scheduler_state_machine.png)

The `run_trials` method provides users with control over various orchestration settings
as well as the total maximum number of trials to evaluate:

- `parallelism` defines the maximum number of trials that may be run at once. If your
  external system supports multiple evaluations in parallel, increasing this number can
  significantly decrease experimentation time. However, it is important to note that as
  parallelism increases, optimiztion performance often decreases. This is because
  adaptive experimentation methods rely on previously observed data for candidate
  generation -- the more tirals that have been observed prior to generation of a new
  candidate, the more accurate Ax's model will be for generation of that candidate.
- `tolerated_trial_failure_rate` sets the proportion of trials are allowed to fail
  before Ax raises an Exception. Depending on how expensive a single trial is to
  evaluate or how unreliable trials are expected to be, the experimenter may want to be
  notified as soon as a single trial fails or they may not care until more than half the
  trials are failing. Set this value as is appropriate for your context.
- `initial_seconds_between_polls` sets the frequency at which the status of a trial is
  checked and the results are attempted to be fetched. Set this to be low for trials
  that are expected to complete quickly or high for trials the are expected to take a
  long time.

```python
client.run_trials(
    max_trials=30,
    parallelism=3,
    tolerated_trial_failure_rate=0.1,
    initial_seconds_between_polls=1,
)
```

<CellOutput>
{
`[INFO 06-04 15:51:09] ax.api.client: GenerationStrategy(name='Center+Sobol+MBM:fast', nodes=[CenterGenerationNode(next_node_name='Sobol', use_existing_trials_for_initialization=True), GenerationNode(name='Sobol', generator_specs=[GeneratorSpec(generator_enum=Sobol, generator_key_override=None)], transition_criteria=[MinTrials(transition_to='MBM'), MinTrials(transition_to='MBM')], suggested_experiment_status=ExperimentStatus.INITIALIZATION, pausing_criteria=[MaxTrialsAwaitingData(threshold=5)]), GenerationNode(name='MBM', generator_specs=[GeneratorSpec(generator_enum=BoTorch, generator_key_override=None)], transition_criteria=None, suggested_experiment_status=ExperimentStatus.OPTIMIZATION, pausing_criteria=None)]) chosen based on user input and problem structure.
[INFO 06-04 15:51:09] Orchestrator: Orchestrator requires experiment to have immutable search space and optimization config. Setting property immutable_search_space_and_opt_config to True on experiment.
[INFO 06-04 15:51:09] Orchestrator: Running trials [0]...
[INFO 06-04 15:51:10] Orchestrator: Running trials [1]...
[INFO 06-04 15:51:12] Orchestrator: Running trials [2]...
[INFO 06-04 15:51:13] Orchestrator: Retrieved COMPLETED trials: 0 - 2.
[INFO 06-04 15:51:13] Orchestrator: Running trials [3]...
[INFO 06-04 15:51:14] Orchestrator: Running trials [4]...
[INFO 06-04 15:51:15] Orchestrator: Running trials [5]...
[INFO 06-04 15:51:16] Orchestrator: Retrieved COMPLETED trials: 3 - 5.
[INFO 06-04 15:51:17] Orchestrator: Running trials [6]...
[INFO 06-04 15:51:18] Orchestrator: Running trials [7]...
[INFO 06-04 15:51:19] Orchestrator: Running trials [8]...
[INFO 06-04 15:51:20] Orchestrator: Retrieved COMPLETED trials: 6 - 8.
[INFO 06-04 15:51:21] Orchestrator: Running trials [9]...
[INFO 06-04 15:51:22] Orchestrator: Running trials [10]...
[INFO 06-04 15:51:24] Orchestrator: Running trials [11]...
[INFO 06-04 15:51:25] Orchestrator: Retrieved COMPLETED trials: 9 - 11.
[INFO 06-04 15:51:25] Orchestrator: Running trials [12]...
[INFO 06-04 15:51:27] Orchestrator: Running trials [13]...
[INFO 06-04 15:51:29] Orchestrator: Running trials [14]...
[INFO 06-04 15:51:30] Orchestrator: Retrieved COMPLETED trials: 12 - 14.
[INFO 06-04 15:51:30] Orchestrator: Running trials [15]...
[INFO 06-04 15:51:32] Orchestrator: Running trials [16]...
[INFO 06-04 15:51:33] Orchestrator: Running trials [17]...
[INFO 06-04 15:51:34] Orchestrator: Retrieved COMPLETED trials: 15 - 17.
[INFO 06-04 15:51:35] Orchestrator: Running trials [18]...
[INFO 06-04 15:51:36] Orchestrator: Running trials [19]...
[INFO 06-04 15:51:37] Orchestrator: Running trials [20]...
[INFO 06-04 15:51:38] Orchestrator: Retrieved COMPLETED trials: 18 - 20.
[INFO 06-04 15:51:39] Orchestrator: Running trials [21]...
[INFO 06-04 15:51:40] Orchestrator: Running trials [22]...
[INFO 06-04 15:51:41] Orchestrator: Running trials [23]...
[INFO 06-04 15:51:42] Orchestrator: Retrieved COMPLETED trials: 21 - 23.
[INFO 06-04 15:51:43] Orchestrator: Running trials [24]...
[INFO 06-04 15:51:44] Orchestrator: Running trials [25]...
[INFO 06-04 15:51:46] Orchestrator: Running trials [26]...
[INFO 06-04 15:51:47] Orchestrator: Retrieved COMPLETED trials: 24 - 26.
[INFO 06-04 15:51:47] Orchestrator: Running trials [27]...
[INFO 06-04 15:51:49] Orchestrator: Running trials [28]...
[INFO 06-04 15:51:50] Orchestrator: Running trials [29]...
[INFO 06-04 15:51:51] Orchestrator: Retrieved COMPLETED trials: 27 - 29.`
}
</CellOutput>

## Step 6: Analyze Results

As before, Ax can compute the best parameterization observed and produce a number of
analyses to help interpret the results of the experiment.

It is also worth noting that the experiment can be resumed at any time using Ax's
storage functionality. When configured to use a SQL databse, the `Client` saves a
snapshot of itself at various points throughout the call to `run_trials`, making it
incredibly easy to continue optimization after an unexpected failure. You can learn more
about storage in Ax [here](../../recipes/experiment-to-json).

```python
best_parameters, prediction, index, name = client.get_best_parameterization()
print("Best Parameters:", best_parameters)
print("Prediction (mean, variance):", prediction)
```

<CellOutput>
{
`Best Parameters: {'x1': 0.20083417377114757, 'x2': 0.0, 'x3': 0.3233687185237639, 'x4': 0.264619409414583, 'x5': 0.30349252800915794, 'x6': 0.7459842908777473}
Prediction (mean, variance): {'hartmann6': (np.float64(-2.7458916491315293), np.float64(0.0017914270460937798))}`
}
</CellOutput>

```python
# display=True instructs Ax to sort then render the resulting analyses
cards = client.compute_analyses(display=True)
```

**Modeled Arm Effects on hartmann6**

Modeled effects on hartmann6. This plot visualizes predictions of the true metric
changes for each arm based on Ax's model. This is the expected delta you would expect if
you (re-)ran that arm. This plot helps in anticipating the outcomes and performance of
arms based on the model's predictions. Note, flat predictions across arms indicate that
the model predicts that there is no effect, meaning if you were to re-run the
experiment, the delta you would see would be small and fall within the confidence
interval indicated in the plot.



<PlotlyFigure data={require('./assets/plot_data/23f45646-c44e-4c90-ab35-7cdca89a274d.json')} />


**Observed Arm Effects on hartmann6**

Observed effects on hartmann6. This plot visualizes the effects from previously-run arms
on a specific metric, providing insights into their performance. This plot allows one to
compare and contrast the effectiveness of different arms, highlighting which
configurations have yielded the most favorable outcomes.



<PlotlyFigure data={require('./assets/plot_data/300a46b5-1a9d-4249-a6f5-1126d8041faa.json')} />


**Utility Progression**

Shows the best hartmann6 value achieved so far across completed trials (objective is to
minimize). The x-axis shows trial index. Only completed or early-stopped trials with
complete metric data are included, so there may be gaps if some trials failed, were
abandoned, or have incomplete data. The y-axis shows cumulative best utility. Only
improvements are plotted, so flat segments indicate trials that didn't surpass the
previous best. Infeasible trials (violating outcome constraints) don't contribute to the
improvements.



<PlotlyFigure data={require('./assets/plot_data/20d87ed1-70d4-4d64-a531-6f826cb979e3.json')} />


**hartmann6 by progression**

The progression plot tracks the evolution of each metric over the course of the
experiment. This visualization is typically used to monitor the improvement of metrics
over Trial iterations, but can also be useful in informing decisions about early
stopping for Trials.



<PlotlyFigure data={require('./assets/plot_data/2c52d50c-2d10-49e3-a7f2-0cc46c0c1533.json')} />


**hartmann6 by wallclock time**

The progression plot tracks the evolution of each metric over the course of the
experiment. This visualization is typically used to monitor the improvement of metrics
over Trial iterations, but can also be useful in informing decisions about early
stopping for Trials.



<PlotlyFigure data={require('./assets/plot_data/3caab4f4-81e5-422a-a029-efa4396f984d.json')} />


**Best Trial for Experiment**

Displays the trial with the best objective value based on raw observations. This
reflects actual measured performance during execution. This trial achieved the optimal
objective value and represents the recommended configuration for your optimization goal.
Only considering COMPLETED trials.




|    |   trial_index |   arm_name | trial_status   | generation_node   |   hartmann6 |       x1 |   x2 |       x3 |       x4 |       x5 |       x6 |
|---:|--------------:|-----------:|:---------------|:------------------|------------:|---------:|-----:|---------:|---------:|---------:|---------:|
|  0 |            24 |       24_0 | COMPLETED      | MBM               |    -2.75973 | 0.200834 |    0 | 0.323369 | 0.264619 | 0.303493 | 0.745984 |


**Summary for hartmann6_experiment**

High-level summary of the `Trial`-s in this `Experiment`




|    |   trial_index |   arm_name | trial_status   | generation_node     |   hartmann6 |       x1 |       x2 |       x3 |       x4 |       x5 |       x6 |
|---:|--------------:|-----------:|:---------------|:--------------------|------------:|---------:|---------:|---------:|---------:|---------:|---------:|
|  0 |             0 |        0_0 | COMPLETED      | CenterOfSearchSpace |   -0.505315 | 0.5      | 0.5      | 0.5      | 0.5      | 0.5      | 0.5      |
|  1 |             1 |        1_0 | COMPLETED      | Sobol               |   -0.032345 | 0.704583 | 0.431898 | 0.472513 | 0.456154 | 0.767344 | 0.7775   |
|  2 |             2 |        2_0 | COMPLETED      | Sobol               |   -0.278328 | 0.09783  | 0.73002  | 0.706638 | 0.546823 | 0.457103 | 0.426167 |
|  3 |             3 |        3_0 | COMPLETED      | Sobol               |   -0.263847 | 0.408975 | 0.150084 | 0.222633 | 0.198145 | 0.156227 | 0.17577  |
|  4 |             4 |        4_0 | COMPLETED      | Sobol               |   -0.007775 | 0.773048 | 0.945703 | 0.956759 | 0.802791 | 0.58805  | 0.527043 |
|  5 |             5 |        5_0 | COMPLETED      | MBM                 |   -0.763498 | 0.623715 | 0.290172 | 0.269716 | 0.449269 | 0.423073 | 0.455956 |
|  6 |             6 |        6_0 | COMPLETED      | MBM                 |   -0.262419 | 0.681357 | 0.217937 | 0.039233 | 0.636273 | 0.425875 | 0.508059 |
|  7 |             7 |        7_0 | COMPLETED      | MBM                 |   -0.377788 | 0.898064 | 0.128105 | 0.288314 | 0.195902 | 0.432803 | 0.446679 |
|  8 |             8 |        8_0 | COMPLETED      | MBM                 |   -0.401103 | 0.474043 | 0.344704 | 0.052945 | 0.366572 | 0.457459 | 0.252127 |
|  9 |             9 |        9_0 | COMPLETED      | MBM                 |   -0.855517 | 0.723387 | 0.183029 | 0.302597 | 0.409518 | 0.314885 | 0.445546 |
| 10 |            10 |       10_0 | COMPLETED      | MBM                 |   -0.433566 | 0.579913 | 0.278196 | 0.096806 | 0.409431 | 0.53834  | 0.456482 |
| 11 |            11 |       11_0 | COMPLETED      | MBM                 |   -0.141956 | 1        | 0.285974 | 0.294942 | 0.436539 | 0.477637 | 0.417028 |
| 12 |            12 |       12_0 | COMPLETED      | MBM                 |   -0.86063  | 0.675967 | 0.147894 | 0.365798 | 0.364529 | 0.222121 | 0.414853 |
| 13 |            13 |       13_0 | COMPLETED      | MBM                 |   -0.160347 | 0.688158 | 0        | 0.37208  | 0.698649 | 0.365773 | 0.413176 |
| 14 |            14 |       14_0 | COMPLETED      | MBM                 |   -0.480153 | 0.689217 | 0.499931 | 0.345765 | 0.268793 | 0.154321 | 0.436927 |
| 15 |            15 |       15_0 | COMPLETED      | MBM                 |   -1.05434  | 0.627517 | 0.077041 | 0.5095   | 0.435514 | 0.255431 | 0.474796 |
| 16 |            16 |       16_0 | COMPLETED      | MBM                 |   -0.115754 | 0.645951 | 0.134719 | 0.509382 | 0.433623 | 0.260243 | 0.096583 |
| 17 |            17 |       17_0 | COMPLETED      | MBM                 |   -1.30113  | 0.621894 | 0.124844 | 0.233188 | 0.430778 | 0.247906 | 0.779864 |
| 18 |            18 |       18_0 | COMPLETED      | MBM                 |   -1.97312  | 0.49748  | 0        | 0.408139 | 0.400084 | 0.26905  | 0.706802 |
| 19 |            19 |       19_0 | COMPLETED      | MBM                 |   -1.49708  | 0.482734 | 0.179217 | 0        | 0.432194 | 0.234998 | 0.693341 |
| 20 |            20 |       20_0 | COMPLETED      | MBM                 |   -0.841177 | 0.57716  | 0.001127 | 1        | 0.401295 | 0.274785 | 0.737135 |
| 21 |            21 |       21_0 | COMPLETED      | MBM                 |   -2.53521  | 0.378548 | 0        | 0.358404 | 0.355598 | 0.277847 | 0.703575 |
| 22 |            22 |       22_0 | COMPLETED      | MBM                 |   -2.10102  | 0.347291 | 0        | 0.390823 | 0.430682 | 0.245899 | 0.723919 |
| 23 |            23 |       23_0 | COMPLETED      | MBM                 |   -2.5959   | 0.410529 | 0        | 0.337028 | 0.286934 | 0.295839 | 0.696859 |
| 24 |            24 |       24_0 | COMPLETED      | MBM                 |   -2.75973  | 0.200834 | 0        | 0.323369 | 0.264619 | 0.303493 | 0.745984 |
| 25 |            25 |       25_0 | COMPLETED      | MBM                 |   -2.43461  | 0.202997 | 0        | 0.335043 | 0.237324 | 0.240996 | 0.773276 |
| 26 |            26 |       26_0 | COMPLETED      | MBM                 |   -2.34099  | 0.177328 | 0        | 0.280383 | 0.275335 | 0.356508 | 0.801245 |
| 27 |            27 |       27_0 | COMPLETED      | MBM                 |   -2.38579  | 0.282098 | 0        | 0.350773 | 0.137587 | 0.299853 | 0.691081 |
| 28 |            28 |       28_0 | COMPLETED      | MBM                 |   -0.837507 | 0.282191 | 0.719482 | 0.354202 | 0.148104 | 0.298851 | 0.718873 |
| 29 |            29 |       29_0 | COMPLETED      | MBM                 |   -2.36449  | 0.272934 | 0        | 0.198731 | 0.172896 | 0.2982   | 0.689922 |


**Sensitivity Analysis for hartmann6**

Understand how each parameter affects hartmann6 according to a second-order sensitivity
analysis.



<PlotlyFigure data={require('./assets/plot_data/2ff7946d-204c-4931-9893-2030865b51b3.json')} />


**hartmann6 vs. x5**

The slice plot provides a one-dimensional view of predicted outcomes for hartmann6 as a
function of a single parameter, while keeping all other parameters fixed at their best
trial value (Arm 24_0). This visualization helps in understanding the sensitivity and
impact of changes in the selected parameter on the predicted metric outcomes.



<PlotlyFigure data={require('./assets/plot_data/c3c8c944-8a14-417a-b549-cf39c227aa54.json')} />


**hartmann6 vs. x4**

The slice plot provides a one-dimensional view of predicted outcomes for hartmann6 as a
function of a single parameter, while keeping all other parameters fixed at their best
trial value (Arm 24_0). This visualization helps in understanding the sensitivity and
impact of changes in the selected parameter on the predicted metric outcomes.



<PlotlyFigure data={require('./assets/plot_data/1beeb189-8848-4aa1-a113-e8e04beedcdd.json')} />


**hartmann6 (Mean) vs. x1, x5**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their best trial
value (Arm 24_0). This plot helps in identifying regions of optimal performance and
understanding how changes in the selected parameters influence the predicted outcomes.
Contour lines represent levels of constant predicted values, providing insights into the
gradient and potential optima within the parameter space.



<PlotlyFigure data={require('./assets/plot_data/6141a9ce-c1a9-4f1c-a506-fd6686bc8f74.json')} />


**Cross Validation for hartmann6 (R² = 0.98)**

The cross-validation plot displays the model fit for each metric in the experiment. It
employs a leave-one-out approach, where the model is trained on all data except one
sample, which is used for validation. The plot shows the predicted outcome for the
validation set on the y-axis against its actual value on the x-axis. Points that align
closely with the dotted diagonal line indicate a strong model fit, signifying accurate
predictions. Additionally, the plot includes 95% confidence intervals that provide
insight into the noise in observations and the uncertainty in model predictions. A
horizontal, flat line of predictions indicates that the model has not picked up on
sufficient signal in the data, and instead is just predicting the mean.



<PlotlyFigure data={require('./assets/plot_data/d6a3b7f0-70ec-4b45-8e45-7c51dd0ee6f5.json')} />


**Summary of model fits**

R² (coefficient of determination) measures how well the model predicts each metric.
Higher values indicate better model fit. Metrics with R² >= 0.1 are highlighted in
green.



<PlotlyFigure data={require('./assets/plot_data/21dc0c86-cc8a-4a20-b52c-3a4b8def6478.json')} />


**Generation Strategy Graph**

GenerationStrategy: Center+Sobol+MBM:fast

Visualize the structure of a GenerationStrategy as a directed graph. Each node
represents a GenerationNode in the strategy, and edges represent transitions between
nodes based on TransitionCriterion. Edge labels show the criterion class names that
trigger the transition.




|    | node_name           | generators   | transitions                        | is_current   |
|---:|:--------------------|:-------------|:-----------------------------------|:-------------|
|  0 | CenterOfSearchSpace | nan          | -> Sobol: AutoTransitionAfterGen   | False        |
|  1 | Sobol               | Sobol        | -> MBM: MinTrials(5), MinTrials(2) | False        |
|  2 | MBM                 | BoTorch      | nan                                | True         |


**Baseline Improvement Healthcheck**

All 1 objective(s) improved over baseline.

**Metric `hartmann6` improved -446.14%** from `-0.51` in arm `'0_0'` to `-2.76` in arm
`'24_0'`.

**Note:** Using the first trial's first arm ('0_0') as the baseline since no explicit
baseline was provided.




|    | Metric    | Status   | Details                                           |
|---:|:----------|:---------|:--------------------------------------------------|
|  0 | hartmann6 | Improved | **Metric `hartmann6` improved -446.14%** from ... |

## Conclusion

This tutorial demonstrates how to use Ax's `Client` for closed-loop optimization using
the Hartmann6 function as an example. This style of optimization is useful in scenarios
where trials are evaluated on some external system or when experimenters wish to take
advantage of parallel evaluation, trial failure handling, or simply to manage
long-running optimization tasks without human intervention. You can define your own
Runner and Metric classes to communicate with whatever external systems you wish to
interface with, and control optimization using the `OrchestrationConfig`.

